cmake_minimum_required(VERSION 3.13)
project(part_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(part_2 main.cpp Edge.cpp Edge.h List_graph.cpp List_graph.h Matrix_graph.cpp Matrix_graph.h DisjointSets.cpp DisjointSets.h PriorityQueue.cpp PriorityQueue.h MST.cpp MST.h QPG.cpp QPG.h MS.cpp MS.h Node.cpp Node.h)